--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
         id: snake-gif
 
         with:
-          github_user_name: thepiyushmalhotra
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          github_user_name: Akash09082001
+          svg_out_path: github-contribution-grid-snake.svg
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
